# tycho-market-maker

./: .cursorignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TmpDoc.md  clean.sh  docker-compose.yaml  dump.rdb  package-lock.json  rustfmt.toml  unwrap-review.md
.cursor/: config.json
config/: .env.ex  base.eth-usdc.toml  mainnet.eth-usdc.toml  mainnet.eth-wbtc.toml  mainnet.usdc-dai.toml  mmc.base.eth-usdc.toml  mmc.mainnet.eth-usdc.toml  mmc.mainnet.eth-wbtc.toml  mmc.mainnet.toml  mmc.mainnet.usdc-dai.toml  mmc.template.toml  mmc.toml  mmc.unichain.eth-usdc.toml  mmc.unichain.toml  quickstart.toml  unichain.btc-usdc.toml  unichain.eth-usdc.toml  unichain.quickstart.toml
config/ex/: .ex.env.monitor.global  .ex.env.unichain.eth-usdc
config/example/: .ex.env.monitor.global
config/testing/: mainnet.eth-usdc.toml  unichain.btc-usdc.toml  unichain.eth-usdc.toml
config/v2/: mainnet.eth-usdc.toml  unichain.eth-usdc.toml  unichain.wbtc-usdc.toml
docs/: tycho-documentation.md
gitbook/: README.md  SUMMARY.md
gitbook/architecture/: overview.md
gitbook/configuration/: environment-variables.md  trading-parameters.md
gitbook/deployment/: production.md
gitbook/getting-started/: installation.md  prerequisites.md  quick-start.md
gitbook/resources/: faq.md
misc/: bundle.sh  clean.sh  config.json  net.pnl.md  rm.gh.trace.sh  template.toml  v2.config.txt
misc/db/: neon_to_UI.json
misc/demo/: pres.raw.demo.gdoc.txt  pres.slides.figma.md  pres.speech.gdoc.md  presentation_speech_gdoc.txt
misc/exec/: notes.md
misc/exec/records/: base.1.txt  unichain.1.txt
misc/ia/: checks.md  latency.md  prompts.txt
misc/logs/: market.maker.logs
misc/old/: mainnet.rs  maker.rs  schema.prisma  watch.rs
misc/old/db/: prisma.rs
misc/old/opti/: optimize_old.rs  optimum.rs
misc/phase2/: resources.txt
ops/: Dockerfile  Dockerfile.old  README.md  dock.sh  docker-cmd.sh  maker.sh  misc.sh  mk2.sh  mkmk.sh  moni.sh  monitor.sh
prisma/: 0.reset.sh  1.db-push.sh  2.sea-orm.sh  all-in-one.sh  prisma.flow.txt  prisma.push.sh  prisma.reset.sh  reset.sh  schema.prisma  sea.orm.sh  tmp.sh
src/: lib.rs  main.rs  maker.rs  mk2.rs  moni.rs  monitor.rs
src/shd/: data.rs  error.rs  lib.rs
src/shd/core/: feed.rs  helpers.rs  inventory.rs  maker.rs  mod.rs  optimize.rs  pricefeed.rs  routing.rs
src/shd/data/: consumer.rs  helpers.rs  mod.rs  neon.rs  prisma.neon.sea.txt  prisma.schema  producer.rs  pub.rs  publisher.rs  receiver.rs  sub.rs
src/shd/entity/: bot.rs  configuration.rs  instance.rs  log.rs  mod.rs  prelude.rs  price.rs  trade.rs
src/shd/helpers/: global.rs
src/shd/maker/: exec.rs  feed.rs  impl.rs  mod.rs  tycho.rs
src/shd/maker/exec/: default.rs  evm.rs  mainnet.rs  mod.rs  pga.rs  simu.rs
src/shd/maker/exec/chain/: base.rs  mainnet.rs  unichain.rs
src/shd/opti/: math.rs  mod.rs  routing.rs
src/shd/types/: builder.rs  config.rs  maker.rs  misc.rs  mod.rs  moni.rs  sol.rs  tycho.rs
src/shd/utils/: constants.rs  evm.rs  misc.rs  mod.rs  static.rs  uptime.rs
test/: pubsub.sh
tests/: integration.rs  parsing.rs  runner.sh
