[package]
name = "mkmk"
version = "0.1.0"
edition = "2024"

[dependencies]

# --- Tycho ---
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", rev = "2ef64b9bcc20de865303efceb3a5d245c34b32c0" }
tycho-common = { version = "0.66.4" }
tycho-client = { version = "0.66.4" }
tycho-execution = { version = "0.81.0",  features = ["evm"] }

# --- Misc ---
num-bigint = "0.4.6"
chrono = "0.4.23"
toml = "0.8.12"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.3"
eyre = "0.6.11"
url = "2.5.0"
anyhow = "1.0"
hex = "0.4.3"
fern = { version = "0.6.2", features = ["colored"] }
colored = "2.0.0"
rand = "0.8.5"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num-traits = "0.2.19"
# --- Async ---
futures = "0.3.31"
tokio = { version = "1.28", features = ["full", "tracing"] }
reqwest = "0.12.4"
# axum = { version = "0.8.1", features = ["macros"] }
# axum-macros = "0.5.0"
strum = "0.26"
strum_macros = "0.26"
async-trait = "0.1"
# --- API ---
# utoipa = "5.3.1"
# utoipa-axum = "0.2.0"
# utoipa-swagger-ui = { version = "9", features = ["axum"] }
# --- Web3 ---
# alloy = { version = "0.3.1", features = ["full", "node-bindings", "json-rpc", "rpc-client", "providers", "signer-local", "rpc-types-eth"] }
alloy = { version = "0.5.4", features = [
    "full", "node-bindings", "json-rpc", "rpc-client", "providers", "signer-local", "rpc-types-eth", "consensus","rpc",
    "rpc-types-mev",
    "network",
    "providers",
    "transports",
    "transport-http",
    "signers",
    ] }
primitive-types = "0.10.1"
alloy-primitives = "0.8.23"
alloy-chains = "0.1.63"
# --- DB ---
redis = { version = "0.26.1", features = ["tokio-comp", "aio", "connection-manager"]  }
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }

# redis = "*" : it tells Cargo “accept any published version of the redis crate” : never recommended for production; instead pin a version or range 
# sea-orm = { version = "0.12", features = ["postgres", "runtime-async-std-native-tls"] }
# https://www.sea-ql.org/SeaORM/


[lib]
name = "shd"
path = "src/shd/lib.rs"

[[bin]]
name = "mk2"
path = "src/mk2.rs"

[[bin]]
name = "moni"
path = "src/moni.rs"

[[bin]]
name = "neon"
path = "src/shd/data/neon.rs"

