[package]
name = "mkmk"
version = "0.1.0"
edition = "2021"
authors = ["Tycho Market Maker Team"]
description = "Market making bot for DEXs using Tycho protocol"
license = "MIT"
repository = "https://github.com/propeller-heads/tycho-market-maker"
keywords = ["defi", "market-making", "tycho", "ethereum"]
categories = ["blockchain", "financial"]

[dependencies]
# Tycho
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", tag = "0.181.3" }
tycho-common = "0.96.1"
tycho-client = "0.96.1"
tycho-execution = { version = "0.130.1", features = ["evm"] }

# Serialization
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.12"

# Async
tokio = { version = "1.28", features = ["full", "tracing"] }
futures = "0.3.31"
reqwest = "0.12.4"
async-trait = "0.1"

# Blockchain
alloy = { version = "1.0.30", features = [
    "full", "node-bindings", "json-rpc", "rpc-client", "providers", "signer-local",
    "rpc-types-eth", "consensus", "rpc", "rpc-types-mev", "network", "transports",
    "transport-http", "signers", "provider-mev-api"
] }
alloy-primitives = "1.3.1"
alloy-chains = "0.2.14"
alloy-mev = "1.0.0"
primitive-types = "0.12.2"

# Database
redis = { version = "0.26.1", features = ["tokio-comp", "aio", "connection-manager"] }
sea-orm = { version = "^0.12.0", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
thiserror = "1.0"
eyre = "0.6.11"
anyhow = "1.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
chrono = "0.4.23"
dotenv = "0.15.0"
url = "2.5.0"
hex = "0.4.3"
strum = "0.26"
strum_macros = "0.26"

[lib]
name = "shd"
path = "src/shd/lib.rs"

[[bin]]
name = "maker"
path = "src/maker.rs"

[[bin]]
name = "monitor"
path = "src/monitor.rs"

# [[bin]]
# name = "backfill"
# path = "src/backfill.rs"

# [[bin]]
# name = "pnl"
# path = "src/pnl.rs"

[patch.crates-io]
svm-rs-builds = { git = "https://github.com/alloy-rs/svm-rs", rev = "99fe67b6" }
